tests/NormalTests/paczka1/fuzzy1/82331875.err
Error in line 4: 0Llctw A675 70,9
Error in line 16: 0Llctw A675 50,8
Error in line 15: 0Qq2 A675 22,2
Error in line 31: 2Wf1E7Wr8 S676 85,5
